--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <section id="involvement" class="section involvement-section">
         <div class="container">
             <h2 class="involvement-title">Projects</h2>
-            <p class="involvement-lead">These are some of the projects I was involved in.</p>
+            <p class="involvement-lead">These are some of the projects I was/am involved in.</p>
             <div class="columns-container columns-3-container">
                 <div class="column">
                     <figure>
