--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="column">
                     <img src="/images/code.svg" alt="code tags img">
                     <h3 class="interest-name">Web Development</h3>
-                    <p class="interest-text">I embarked on my journey into web development back in the 8th grade, and my passion for it has only intensified over the years. Despite the absence of formal academic curriculum in my high school, I've dedicated the past four years to refining my web development skills independently. Currently a junior, <a href="https://replit.com/@thinker-bu">here's a snapshot of some of the projects I've crafted during this period.</a></p>
+                    <p class="interest-text">I embarked on my journey into web development back in the 8th grade, and my passion for it has only intensified over the years. Despite the absence of formal academic curriculum in my high school, I've dedicated the past four years to refining my web development skills independently. Currently a junior, <a href="/projects_made">here's a snapshot of some of the projects I've crafted during this period.</a></p>
                 </div>
                 <div class="column">
                     <img src="/images/code-brackets.svg" alt="code brackets img">
