--- a/projects_made.html
+++ b/projects_made.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Website projects made</h1>
-    <a href="" >Login-register form</a>
+    <a href="/fizzmingle.html" >Login-register form</a>
   </body>
 </html>
