--- a/Projects-Made/projects-made.html
+++ b/Projects-Made/projects-made.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Website projects made</title>
-    <link rel="stylesheet" href="/projects-made.css">
+    <link rel="stylesheet" href="/Projects-Made/projects-made.css">
   </head>
   <body>
     <h1>Website projects made</h1>
