--- a/Login-Register/fizzmingle.html
+++ b/Login-Register/fizzmingle.html
@@ -22,9 +22,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
   <link rel="icon" href="/icons/FizzMingle-icon.png" type="image/png">
-  <link rel="stylesheet" href="/fizzmingle.css">
+  <link rel="stylesheet" href="/Login-Register/fizzmingle.css">
   <title>FizzMingle</title>
-  <script src="/fizzmingle.js" defer></script>
+  <script src="/Login-Register/fizzmingle.js" defer></script>
 </head>
 
 <body>
