--- a/Login-Register/fizzmingle.html
+++ b/Login-Register/fizzmingle.html
@@ -29,16 +29,16 @@
 
 <body>
   <section id="login">
-    <img src="/icons/FizzMingle-logo.png" alt="FizzMingle logo">
+    <img src="/Login-Register/icons/FizzMingle-logo.png" alt="FizzMingle logo">
     <h2>FizzMingle</h2>
     <p>Bubbles in a drink, with the social aspect of mingling.</p>
     <div class="social-login">
       <a href="#" target="_blank">
-        <img src="/icons/google.png" alt="Google Login">
+        <img src="/Login-Register/icons/google.png" alt="Google Login">
         <p>Continue with Google</p>
       </a>
       <a href="#" target="_blank">
-        <img src="/icons/apple-logo.png" alt="Apple Login">
+        <img src="/Login-Register/icons/apple-logo.png" alt="Apple Login">
         <p>Continue with Apple</p>
       </a>
     </div>
@@ -58,16 +58,16 @@
   </section>
 
   <section id="register">
-    <img src="/icons/FizzMingle-logo.png" alt="FizzMingle logo">
+    <img src="/Login-Register/icons/FizzMingle-logo.png" alt="FizzMingle logo">
     <h2>FizzMingle</h2>
     <p>Bubbles in a drink, with the social aspect of mingling.</p>
     <div class="social-login">
       <a href="#" target="_blank">
-        <img src="/icons/google.png" alt="Google Login">
+        <img src="/Login-Register/icons/google.png" alt="Google Login">
         <p>Continue with Google</p>
       </a>
       <a href="#" target="_blank">
-        <img src="/icons/apple-logo.png" alt="Apple Login">
+        <img src="/Login-Register/icons/apple-logo.png" alt="Apple Login">
         <p>Continue with Apple</p>
       </a>
     </div>
