--- a/My Website/index.html
+++ b/My Website/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="My website." />
-    <title>My Site</title>
+    <meta name="description" content="Explore and enjoy my site." />
+    <meta name="keywords" content="" />-->
+    <--!<meta name="author" content="H. G." />
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content="7 days" />
+
+    <meta property="og:title" content="My Site" />
+    <meta property="og:description" content="Explore and enjoy my site" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://drama-maker.github.io/" />
+    <--!<meta property="og:image" content="https://drama-maker.github.io/images/og-image.jpg" />-->
+
+    <--!<link rel="icon" href="favicon.ico" type="image/x-icon" />-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +23,8 @@
 
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/style.css" />
+
+    <title>My Site</title>
 </head>
 <body>
     <!-- HERO -->
