--- a/Projects-Made/projects-made.html
+++ b/Projects-Made/projects-made.html
@@ -6,25 +6,29 @@
   </head>
   <body>
     <h1>Website projects made</h1>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Projects-Made/To-do/to-do.html" >To Do</a>
-    <!--<a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>
-    <a href="/Login-Register/fizzmingle.html" >Login-register form</a>-->
+    <ul styles="text-decoration: none;">
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Projects-Made/To-do/to-do.html" >To Do</a></li>
+      <!--
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      -->
+    </ul>
   </body>
 </html>
