--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="My website." />
-    <title>My Site</title>
+    <meta name="author" content="H. G." />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#E9A4AE" />
+
+    <title>My Website</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
