--- a/index.html
+++ b/index.html
@@ -58,17 +58,19 @@
                     <p class="first-letter"><strong>I'm Hanna.</strong></p>
                     <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in genetic manipulation. I find joy in learning new things.</p>
                 </div>
+                <div class="column">
+                    <pre>
+                        Currently working on:
+                        img container on page,
+                        projects made site,
+                        uploading made projects,
+                        uploading art,
+                        studying dna,
+                        working the brain...
+                    </pre>
+                </div>
             </div>
         </div>
-        <pre>
-            Currently working on:
-            img container on page,
-            projects made site,
-            uploading made projects,
-            uploading art,
-            studying dna,
-            working the brain...
-        </pre>
     </section>
 
     <!-- MY INTERESTS -->
