--- a/Projects-Made/Login-Register/fizzmingle.html
+++ b/Projects-Made/Login-Register/fizzmingle.html
@@ -41,12 +41,29 @@
     </section>
 
     <section id="register" style="display: none;">
+        <img src="/Projects-Made/Login-Register/icons/FizzMingle-logo.png" alt="FizzMingle logo">
+        <h2>FizzMingle</h2>
+        <p>Bubbles in a drink, with the social aspect of mingling.</p>  
+        <div class="social-login">
+            <a href="#" target="_blank">
+                <img src="/Projects-Made/Login-Register/icons/google.png" alt="Google Login">
+                <p>Continue with Google</p>
+            </a>
+            <a href="#" target="_blank">
+                <img src="/Projects-Made/Login-Register/icons/apple-logo.png" alt="Apple Login">
+                <p>Continue with Apple</p>
+            </a>
+        </div>
+        <p>or</p>
         <form id="register-form">
             <label for="new-email">Email:</label>
             <input type="email" id="new-email" name="new-email" placeholder="Email address" required>
             <label for="new-password">Create Password:</label>
-            <input type="password" id="new-password" name="new-password" placeholder="Create password" required>
-            <p>Password requirements: At least 8 characters</p>
+            <input type="password" id="new-password" name="new-password" placeholder="Create password" required minlength="8">
+            <p id="remember-me">
+                <input type="checkbox" id="remember" name="remember">
+                <label for="remember">Remember me</label>
+            </p>
             <input type="submit" value="Register">
         </form>
         <p>Already have an account? <a id="login-link" href="#login">Login here</a></p>
@@ -91,7 +108,7 @@
 
             function registerUser(email, password) {
                 setTimeout(function() {
-                    console.log('Registration successful:', email);
+                    alert('Registration successful:', email);
                 }, 1000);
             }
 
@@ -100,15 +117,10 @@
                 const newEmail = $('#new-email').val();
                 const newPassword = $('#new-password').val();
 
-                if (newPassword.length < 8) {
-                    console.log('Password should be at least 8 characters long.');
-                    return;
-                }
-
                 registerUser(newEmail, newPassword);
             });
             });
-                console.log('Registration successful:', email);
+                alert('Registration successful:', email);
             }
 
             function loginUser(email, password, rememberMe) {
@@ -130,10 +142,8 @@
             $('#register-link').on('click', showRegister);
 
             function loginUser(email, password, rememberMe) {
-                // Simulating an asynchronous login process
                 setTimeout(function() {
-                    console.log('Login successful:', email);
-                    // You can redirect the user or perform other actions after login
+                    alert('Login successful:', email);
                 }, 1000);
             }
 
@@ -145,7 +155,7 @@
                 loginUser(email, password, rememberMe);
             });
             });
-                console.log('Login successful:', email);
+                alert('Login successful:', email);
             }
 
             $('#login-form').submit(function (event) {
