--- a/Projects-Made/Login-Register/fizzmingle.html
+++ b/Projects-Made/Login-Register/fizzmingle.html
@@ -31,10 +31,10 @@
             <input type="email" id="email" name="email" placeholder="Email address" required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" placeholder="Password" required>
-            <p id="remember-me">
+            <span id="remember-me">
                 <input type="checkbox" id="remember" name="remember">
-                <label for="remember">Remember me</label>
-            </p>
+                <p id="r_text">Remember me</p>
+            </span>
             <input type="submit" value="Continue">
         </form>
         <p>Don't have an account? <a id="register-link" href="#register">Register here</a></p>
@@ -60,10 +60,10 @@
             <input type="email" id="new-email" name="new-email" placeholder="Email address" required>
             <label for="new-password">Create Password:</label>
             <input type="password" id="new-password" name="new-password" placeholder="Create password" required minlength="8">
-            <p id="remember-me">
+            <span id="remember-me">
                 <input type="checkbox" id="remember" name="remember">
-                <label for="remember">Remember me</label>
-            </p>
+                <p id="r_text">Remember me</p>
+            </span>
             <input type="submit" value="Register">
         </form>
         <p>Already have an account? <a id="login-link" href="#login">Login here</a></p>
