--- a/Projects-Made/projects-made.html
+++ b/Projects-Made/projects-made.html
@@ -5,11 +5,37 @@
     <link rel="stylesheet" href="/Projects-Made/projects-made.css">
   </head>
   <body>
-    <h1>Website projects made</h1>
+    <h1>Website projects made:</h1>
+    <p>Ready</p>
     <ul>
-      <li><a href="/Projects-Made/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Projects-Made/To-do/to-do.html" >To Do</a></li>
       <!--
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      -->
+    </ul>
+    <p>Up for fixing:</p>
+    <ul>
+      <li><a href="/Projects-Made/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <!--
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
