--- a/Projects-Made/projects-made.html
+++ b/Projects-Made/projects-made.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>Website projects made:</h1>
-    <p>Ready</p>
+    <p>Styled:</p>
     <ul>
-      <li><a href="/Projects-Made/To-do/to-do.html" >To Do</a></li>
       <!--
+      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
@@ -31,11 +31,11 @@
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       -->
     </ul>
-    <p>Up for fixing:</p>
+    <p>Not styled:</p>
     <ul>
       <li><a href="/Projects-Made/Login-Register/fizzmingle.html" >Login-register form</a></li>
+      <li><a href="/Projects-Made/To-do/to-do.html" >To Do</a></li>
       <!--
-      <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
       <li><a href="/Login-Register/fizzmingle.html" >Login-register form</a></li>
