--- a/projects-made.html
+++ b/projects-made.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Website projects made:</h1>
     <ul>
-      <li><a href="/Projects-Made/To-do/to-do.html" >ToDo</a></li>
+      <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
     </ul>
   </body>
 </html>
