--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </header>
             <div>
                 <h1 class="hero-title">Hello!</h1>
-                <p class="hero-lead">Welcome to my site.</p>
+                <p class="hero-lead">Welcome to my site. This site is being updated constantly. This site is still under construcktion. Please walk around with caution.</p>
                 <a href="#about" class="hero-button">Further</a>
             </div>
         </div>
@@ -81,6 +81,11 @@
                     <img src="/images/code-brackets.svg" alt="code brackets img">
                     <h3 class="interest-name">C++</h3>
                     <p class="interest-text">My venture into the realm of C++ programming started in the 1st grade of high school, and I've dedicated the 2 years to honing my skills in this language and similar ones like: python, java. Over the past two years, I've delved into various aspects of C++ development, and <a href="https://replit.com/@thinker-bu" alt="Link to my replit profile." target="_blank">here are a few highlights from my projects.</a></p>
+                </div>
+                <div class="column">
+                    <img src="/images/code-brackets.svg" alt="code brackets img">
+                    <h3 class="interest-name">Genes</h3>
+                    <p class="interest-text"><a href="#" alt="" target="_blank"></a></p>
                 </div>
             </div>
         </div>
