--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </header>
             <div>
                 <h1 class="hero-title">Hello!</h1>
-                <p class="hero-lead">Welcome to my site. This site is being updated constantly. This site is still under construcktion. Please walk around with caution.</p>
+                <p class="hero-lead">Welcome to my site. This site is being updated constantly. This site is still under construction. Please walk around with caution.</p>
                 <a href="#about" class="hero-button">Further</a>
             </div>
         </div>
