--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p class="first-letter"><strong>I'm Hanna.</strong></p>
                     <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in genetic manipulation. I find joy in learning new things.</p>
                 </div>
-                <div class="column" id="slideshow" title="Click to see my art gallery."></div>
+                <a href="#gallery.html"><div class="column" id="slideshow" title="Click to see my art gallery."></div></a>
             </div>
         </div>
     </section>
@@ -168,8 +168,6 @@
 
         const imageUrls = [
             '/images/Iced_Monster_Land.png',
-            '/images/jelly-background.jpg',
-            '/images/flower-background.jpg',
         ];
         
         const slideshowContainer = document.getElementById('slideshow');
