--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="H. G." />
+    <meta name="description" content="Personal website of H. G. - Passionate about drawing, programming, mechatronics, web development, and more." />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#E9A4AE" />
+    <!--<link rel="icon" href="/favicon.ico" />-->
 
     <title>My Website</title>
 
@@ -147,9 +149,9 @@
             <div class="copyright">
                 <p>&copy; H.G.</p>
             </div>
-            <div class="social">
+            <!--<div class="social">
                 <a href="#" target="_blank" name="my art"><?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="1.5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#FFFFFF"><path d="M2 19V9C2 7.89543 2.89543 7 4 7H4.5C5.12951 7 5.72229 6.70361 6.1 6.2L8.32 3.24C8.43331 3.08892 8.61115 3 8.8 3H15.2C15.3889 3 15.5667 3.08892 15.68 3.24L17.9 6.2C18.2777 6.70361 18.8705 7 19.5 7H20C21.1046 7 22 7.89543 22 9V19C22 20.1046 21.1046 21 20 21H4C2.89543 21 2 20.1046 2 19Z" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12 17C14.2091 17 16 15.2091 16 13C16 10.7909 14.2091 9 12 9C9.79086 9 8 10.7909 8 13C8 15.2091 9.79086 17 12 17Z" stroke="#FFFFFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></a>
-            </div>
+            </div>-->
         </div>
     </footer>
     <script>
