--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p class="first-letter"><strong>I'm Hanna.</strong></p>
                     <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in genetic manipulation. I find joy in learning new things.</p>
                 </div>
-                <a href="#gallery.html"><div class="column" id="slideshow" title="Click to see my art gallery."></div></a>
+                <a href="/gallery.html"><div class="column" id="slideshow" title="Click to see my art gallery."></div></a>
             </div>
         </div>
     </section>
