--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column about-text">
                     <h2 class="section-title">About Me</h2>
                     <p class="first-letter"><strong>I'm Hanna.</strong></p>
-                    <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in genetic manipulation. I find joy in learning new things.</p>
+                    <p>I have a deep passion for both drawing and programming. Beyond my technical pursuits, I also have a keen interest in genetic manipulation. I find joy in learning new things. <strong>My art gallery will show up once clicked on img &#8594;.</strong></p>
                 </div>
                 <a href="/gallery.html"><div class="column" id="slideshow" title="Click to see my art gallery."></div></a>
             </div>
