--- a/projects-made.html
+++ b/projects-made.html
@@ -6,8 +6,23 @@
   </head>
   <body>
     <h1>Website projects made:</h1>
-    <ul>
-      <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
-    </ul>
+    <span>
+      <h2>HTML:</h2>
+      <ul>
+        <li><a href="" ></a></li>
+      </ul>
+    </span>
+    <span>
+      <h2>CSS:</h2>
+      <ul>
+        <li><a href="#" ></a></li>
+      </ul>
+    </span>
+    <span>
+      <h2>JS:</h2>
+      <ul>
+        <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
+      </ul>
+    </span>
   </body>
 </html>
