--- a/gallery.html
+++ b/gallery.html
@@ -48,6 +48,76 @@
             <p>Title: Iced Monster Land</p>
         </div>
     </div>
+    <div class="image-container">
+        <img src="/images/Ducky.png" alt="Illustration of a duck.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Ducky</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/catOnPillow.jpg" alt="Drawing of a cat.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Cat on a pillow</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/eyeWide.jpg" alt="Sketch of a wide eye.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Sketch No. 1</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/flowersOnTile.jpg" alt="Drawing on a tile, flowers.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Flowers on tiles</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/girlBraids.jpg" alt="Drawing of a girl with braids.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Girl with braids.</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/girlSquareToRound.jpg" alt="Drawing of a girl, hair covered with fabric.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Girl in fabric</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/hoodedEye.jpg" alt="Sketch of a hooded eye.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Sketch No. 2</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/lips1.jpg" alt="Sketch of vampire lips.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Sketch No. 3</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/nose1.jpg" alt="Sketch of a nose.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Sketch No. 4</p>
+            </div>
+    </div>
+    <div class="image-container">
+        <img src="/images/woman1.jpg" alt="Drawing of a woman's profile.">
+            <div class="image-overlay">
+                <p>Author: H.G.</p>
+                <p>Title: Profile drawing No. 1</p>
+            </div>
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
