--- a/gallery.html
+++ b/gallery.html
@@ -12,12 +12,17 @@
     <title>My Art</title>
     
     <style>
+        body {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
         .image-container {
             position: relative;
             overflow: hidden;
             width: 200px;
-            margin: 5px;
-            float: left;
+            margin: 10px; /* Adjust the margin to control spacing between images */
         }
 
         img {
@@ -26,8 +31,8 @@
             transition: transform 0.3s;
         }
 
-        .enlarge-on-hover:hover {
-            transform: scale(1.5);
+        .partial-enlarge-on-hover:hover img {
+            transform: scale(5);
         }
 
         .image-overlay {
@@ -128,7 +133,7 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            const imageContainers = document.querySelectorAll('.enlarge-on-hover');
+            const imageContainers = document.querySelectorAll('.partial-enlarge-on-hover');
 
             imageContainers.forEach(container => {
                 container.addEventListener('mousemove', (e) => {
