--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
+            background-color: #6495ED;
         }
 
         .image-container {
