--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,6 @@
         body {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-around;
             background-color: #6495ED;
         }
 
@@ -23,7 +22,7 @@
             position: relative;
             overflow: hidden;
             width: 200px;
-            margin: 10px; /* Adjust the margin to control spacing between images */
+            margin: 10px;
         }
 
         img {
