--- a/gallery.html
+++ b/gallery.html
@@ -66,17 +66,15 @@
 
         .enlarge-on-hover .image-overlay {
             position: absolute;
-            top: 0;
+            bottom: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
+            background: rgba(255, 255, 255, 0.5);
+            padding: 10px;
+            box-sizing: border-box;
             opacity: 0;
             transition: opacity 0.3s;
+            text-align: center;
         }
 
         .enlarge-on-hover:hover .image-overlay {
