--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <title>My Art</title>
 
     <style>
-        body {
+                body {
             display: flex;
             flex-wrap: wrap;
             background-color: #6495ED;
@@ -46,6 +46,7 @@
             box-sizing: border-box;
             opacity: 0;
             transition: opacity 0.3s;
+            text-align: center; /* Center the text */
         }
 
         .image-container:hover .image-overlay {
