--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <title>My Art</title>
 
     <style>
-                body {
+        body {
             display: flex;
             flex-wrap: wrap;
             background-color: #6495ED;
@@ -33,7 +33,7 @@
         }
 
         .partial-enlarge-on-hover:hover img {
-            transform: scale(5);
+            transform: scale(10);
         }
 
         .image-overlay {
@@ -46,7 +46,7 @@
             box-sizing: border-box;
             opacity: 0;
             transition: opacity 0.3s;
-            text-align: center; /* Center the text */
+            text-align: center;
         }
 
         .image-container:hover .image-overlay {
