--- a/gallery.html
+++ b/gallery.html
@@ -22,6 +22,7 @@
             position: relative;
             overflow: hidden;
             width: 200px;
+            margin: 10px;
         }
 
         img {
@@ -32,7 +33,7 @@
         }
 
         .partial-enlarge-on-hover:hover img {
-            transform: scale(10);
+            transform: scale(5);
         }
 
         .image-overlay {
@@ -61,7 +62,7 @@
         }
 
         .enlarge-on-hover:hover img {
-            transform: scale(1.5);
+            transform: scale(5);
         }
 
         .enlarge-on-hover .image-overlay {
