--- a/gallery.html
+++ b/gallery.html
@@ -93,10 +93,9 @@
     </div>
     <div class="image-container">
         <img src="/images/Ducky.png" alt="Illustration of a duck.">
-            <div class="image-overlay">
-                <p>Author: H.G.</p>
-                <p>Title: Ducky</p>
-            </div>
+        <p>Author: H.G.</p>
+        <p>Title: Ducky</p>
+        <div class="image-overlay"></div>
     </div>
     <div class="image-container">
         <img src="/images/catOnPillow.jpg" alt="Drawing of a cat.">
