--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,6 @@
             left: 0;
             width: 100%;
             background: rgba(255, 255, 255, 0.5);
-            padding: 10px;
             box-sizing: border-box;
             opacity: 0;
             transition: opacity 0.3s;
@@ -92,10 +91,11 @@
         </div>
     </div>
     <div class="image-container">
-        <img src="/images/Ducky.png" alt="Illustration of a duck.">
-        <p>Author: H.G.</p>
-        <p>Title: Ducky</p>
-        <div class="image-overlay"></div>
+        <img src="/images/Ducky.png" alt="Illustration of a duck." class="enlarge-on-hover">
+        <div class="image-overlay">
+            <p>Author: H.G.</p>
+            <p>Title: Ducky</p>
+        </div>
     </div>
     <div class="image-container">
         <img src="/images/catOnPillow.jpg" alt="Drawing of a cat.">
