--- a/gallery.html
+++ b/gallery.html
@@ -12,26 +12,28 @@
     <title>My Art</title>
 
     <style>
-        body {
+         body {
             display: flex;
             flex-wrap: wrap;
-            background-color: #6495ED;
+            justify-content: space-around;
         }
 
         .image-container {
             position: relative;
             overflow: hidden;
             width: 200px;
-            margin: 10px;
+            margin: 5px;
+            float: left;
+            margin: 10px; /* Adjust the margin to control spacing between images */
         }
 
         img {
-            width: 100%;
-            height: auto;
+@@ -26,8 +31,8 @@
             transition: transform 0.3s;
-            display: block;
         }
 
+        .enlarge-on-hover:hover {
+            transform: scale(1.5);
         .partial-enlarge-on-hover:hover img {
             transform: scale(5);
         }
@@ -42,42 +44,12 @@
             left: 0;
             width: 100%;
             background: rgba(255, 255, 255, 0.5);
-            box-sizing: border-box;
-            opacity: 0;
-            transition: opacity 0.3s;
-            text-align: center;
-        }
-
-        .image-container:hover .image-overlay {
-            opacity: 1;
-        }
-
-        .enlarge-on-hover {
-            overflow: hidden;
-        }
-
-        .enlarge-on-hover img {
-            transition: transform 0.3s;
-        }
-
-        .enlarge-on-hover:hover img {
-            transform: scale(5);
-        }
-
-        .enlarge-on-hover .image-overlay {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.5);
             padding: 10px;
             box-sizing: border-box;
             opacity: 0;
             transition: opacity 0.3s;
-            text-align: center;
         }
-
-        .enlarge-on-hover:hover .image-overlay {
+        .image-container:hover .image-overlay {
             opacity: 1;
         }
     </style>
