--- a/projects-made.html
+++ b/projects-made.html
@@ -9,7 +9,7 @@
     <span>
       <h2>HTML:</h2>
       <ul>
-        <li><a href="" ></a></li>
+        <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
       </ul>
     </span>
     <span>
