--- a/Projects-Made/to-do.html
+++ b/Projects-Made/to-do.html
@@ -85,6 +85,8 @@
         taskList.removeChild(taskItem);
     }
 </script>
-
+    <footer>
+        <p>&copy; H.G.</p>
+    </footer>
 </body>
 </html>
