--- a/projects-made.html
+++ b/projects-made.html
@@ -24,5 +24,8 @@
         <li><a href="/Projects-Made/to-do.html" >ToDo</a></li>
       </ul>
     </span>
+    <footer>
+        <p>&copy; H.G.</p>
+    </footer>
   </body>
 </html>
