--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -116,6 +116,9 @@
             var ulElement = document.getElementById(recipeId);
             var pElement = document.getElementById(recipeId + '-description');
 
+            ulElement.style.display = 'none';
+            pElement.style.display = 'none';
+            
             if (ulElement.style.display === 'none') {
                 ulElement.style.display = 'block';
                 pElement.style.display = 'block';
