--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -112,6 +112,7 @@
         <p>&copy; H.G.</p>
     </footer>
     <script>
+        alert("If you click on a recipe's name, you can hide it's ingredients and instructions.");
         function toggleRecipe(recipeId) {
             var ulElement = document.getElementById(recipeId);
             var pElement = document.getElementById(recipeId + '-description');
