--- a/projects-made.html
+++ b/projects-made.html
@@ -10,6 +10,7 @@
       <h2>HTML:</h2>
       <ul>
         <li><a href="/Projects-Made/recipe-book.html" >Recipe Book</a></li>
+        <li><a href="/Projects-Made/contact-form.html" >Simulation of a contact form</a></li>
       </ul>
     </span>
     <span>
