--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="4" required placeholder="Your message..."></textarea>
     
-                <button type="button" onclick="simulateSubmit()">Submit</button>
+                <button class="submit-button" type="button" onclick="simulateSubmit()">Submit</button>
             </form>
         </div>
     </section>
