--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section id="contact" class="section contact-section">
         <div class="container">
             <h2 class="contact-title">Write to me! :)</h2>
-            <p>This is a simulation, your message won't be received.</p>
+            <p class="contact-paragraph">This is a simulation, your message won't be received.</p>
             <form id="contactForm">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required placeholder="Your name">
