--- a/Projects-Made/contact-form.html
+++ b/Projects-Made/contact-form.html
@@ -5,10 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
     <style>
-        body{
-            display: block;
-            justify-content: space-between;
+        body {
+            display: flex;
+            flex-direction: column;
             align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        header, section, footer {
+            width: 100%;
+            max-width: 600px;
+            text-align: center;
+        }
+
+        footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: #f0f0f0;
+            text-align: left;
+            padding: 10px;
         }
     </style>
 </head>
