--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -3,7 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Recipe Book</title>
+
+    <style>        
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #E6F7FF;
+            color: #333;
+        }
+
+        header {
+            background-color: #66B2FF;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
+            color: #fff;
+        }
+
+        p {
+            font-size: 1.2em;
+            color: #fff;
+        }
+
+        section {
+            padding: 20px;
+        }
+
+        article {
+            margin-bottom: 30px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            color: #3366CC;
+            cursor: pointer;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        p[id^="recipe"] {
+            display: none;
+        }
+
+        footer {
+            background-color: #66B2FF;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        footer p {
+            font-size: 0.8em;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <header>
