--- a/Projects-Made/contact-form.html
+++ b/Projects-Made/contact-form.html
@@ -12,6 +12,9 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #ffeb3b;
+            color: #333;
         }
 
         header, section, footer {
@@ -20,14 +23,80 @@
             text-align: center;
         }
 
+        header {
+            background-color: #ffca28;
+            color: #333;
+            padding: 20px;
+            border-radius: 10px 10px 0 0;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+
+        p {
+            margin-top: 10px;
+            font-size: 1.2em;
+        }
+
+        section {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 0 0 10px 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: -10px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        label {
+            margin-top: 10px;
+            font-size: 1.2em;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            margin-bottom: 15px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+
+        button {
+            background-color: #ffca28;
+            color: #333;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2em;
+        }
+
+        button:hover {
+            background-color: #ffbf00;
+        }
+
         footer {
             position: fixed;
             bottom: 0;
             left: 0;
             width: 100%;
-            background: #f0f0f0;
+            background: #ffca28;
             text-align: left;
             padding: 10px;
+        }
+
+        footer p {
+            font-size: 0.8em;
+            color: #333;
         }
     </style>
 </head>
