--- a/Projects-Made/recipe-book.html
+++ b/Projects-Made/recipe-book.html
@@ -26,6 +26,11 @@
         }
 
         p {
+            font-size: 0.8em;
+            color: #000;
+        }
+        
+        p:first-child {
             font-size: 1.2em;
             color: #fff;
         }
